fix: add nowrap to pack actions column

--- a/src/features/cards/PackList/Table/RowPack/RowPack.module.scss
+++ b/src/features/cards/PackList/Table/RowPack/RowPack.module.scss
@@ -12,7 +12,7 @@
 }
 
 .actions {
-    @include flex(row, flex-start, center, wrap);
+    @include flex(row, flex-start, center, nowrap);
     cursor: pointer;
     color: black;
 
@@ -66,4 +66,9 @@
     height: 60px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.nameCell {
+    max-width: 400px;
+    word-break: break-all;
 }
